<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_viewactivity2"
        android:title="@string/view2"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_viewactivity3"
        android:title="@string/expansionpanel"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_viewactivity4"
        android:title="@string/doctorprofile"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_viewactivity5"
        android:title="@string/startconsultation"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_viewactivity6"
        android:title="@string/onboarding"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
